--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ data/eun1/players/*
 images/svgrecap/euw1/*.svg
 images/svgrecap/na1/*.svg
 images/svgrecap/eun1/*.svg
+images/svgrecap/euw1/*.png
+images/svgrecap/na1/*.png
+images/svgrecap/eun1/*.png
