--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 ddragon/
 parts/init.php
-data/euw1/games/*
-data/na1/games/*
-data/eun1/games/*
+data/euw1/games/*.json
+data/na1/games/*.json
+data/eun1/games/*.json
 data/euw1/players/*
 data/na1/players/*
 data/eun1/players/*
